--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/supabase-js": "^2.83.0",
+    "@vercel/analytics": "^1.6.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
