--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": ["node_modules", "Flowise"]
+  "exclude": ["node_modules", "Flowise", "supabase/functions/**/*"]
 }
